z-index fix

--- a/assets/css/grid.scss
+++ b/assets/css/grid.scss
@@ -134,7 +134,7 @@ $buttonyellow: #fafad2;
   font-size: 120%;
   color: $nav-color-text;
   //text-align: center;
-  z-index: 500
+  z-index: 450
 }
 .textwhite{color:white}
 @media screen and (min-width: $mob-pixels) {
